--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 YOUTUBE_API_KEY = "AIzaSyA_ICFwN10QROhq4tW6QlViRFR6OFZaB28"
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = "sk-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"
+AI21_API_KEY = "CmbzOaW7sLWwXUe6GOky8A1b5P4c9paZ"
