--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "api": "^6.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
